Fixed the border issue on Safari and iOS

--- a/src/App.css
+++ b/src/App.css
@@ -286,6 +286,9 @@ body{
   border-image: linear-gradient(to bottom, rgba(255, 84, 5, 1) 25%,rgba(239, 0, 107, 1) 25%, rgba(239, 0, 107, 1) 50%, rgba(175, 0, 103, 1) 50%, rgba(175, 0, 103, 1) 75%, rgba(10, 193, 255, 1) 75%) 5;
 }
 .Solid-Bottom-Border{
+  border-top:0px;
+  border-left:0px;
+  border-right:0px;
   border-image: linear-gradient(to right, rgba(255, 84, 5, 1) 25%,rgba(239, 0, 107, 1) 25%, rgba(239, 0, 107, 1) 50%, rgba(175, 0, 103, 1) 50%, rgba(175, 0, 103, 1) 75%, rgba(10, 193, 255, 1) 75%) 5;
 }
 
